# ai-os-blueprint

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  railway.toml
.claude/: settings.json
.claude/commands/: build-context.md  create-plan.md  decide.md  implement.md  prime.md
agents/: optimizer.md  scout.md
aios/: dependency_container.py
aios/daemon/: __init__.py  __main__.py  adapter_factory.py  client_registry.py  client_worker.py  main.py  scheduler.py
aios/foundation/: __init__.py  employee_memory.py  feedback_loop.py  registry.py
api/: asgi.py  deps.py  main.py
api/middleware/: verify_signatures.py
api/routers/: beacon_webhooks.py  health.py  inbox.py  optimizer.py  pipeline.py
config/: settings.py
context/: README.md  business-frameworks.md  integrations.md  personal-operating.md  personal.md  voice.md
context/brand/: brand-guide.md  color-palette.md  design-preferences.md  mood-board.md  typography.md
context/kirsten-client-zero/: business-frameworks.md  icp.md  offer.md  personal.md  voice.md
data/knowledge/: copywriting-frameworks.md  nick-saraev-cold-email.md  shelby-sapp-sales.md
data/reference/: ad-library-scraper-spec.md  aios-niche-selection.docx  aios-top-20-niches-comprehensive.docx  client-deployment-sop.md  client-onboarding-guide.md  lead-scraping-sop.md  offer-upgrade-playbook.docx  outbound-system-spec.md  scraping-sources-roadmap.md
departments/: admin.md  finance.md  operations.md
docs/: postmortem-v1.md
docs/architecture/: agent-deployment-lifecycle.md  aios-structural-plan-2026-04-29.md  scaffolding-new-projects.md
docs/superpowers/: README.md
memory/: INDEX.md  MEMORY.md  README.md
memory/sessions/: 2026-04-22.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  _TEMPLATE.md
os/: __init__.py  registry.py
os/foundation/: __init__.py  autonomy.py  decision_logger.py  embedder.py  knowledge.py  pattern_matcher.py
os/memory/: __init__.py  store.py
playbooks/: README.md
rules/: global-writing-guardrails.md
scripts/: _owner_extraction.py  _scrape_common.py  _website_fetcher.py  archive_client_intake.py  configure_trigify_monitors.py  cost_dashboard.py  demo_pipeline.py  demo_pipeline_live.py  ingest_clutch_corpus.py  ingest_preresolved_contacts.py  load_components.py  load_context.py  load_knowledge.py  plan1_acceptance.sh  plan1_acceptance_preflight.py  plan1_acceptance_verify.py  provision_new_client.py  run_cool_off_cycle.py  run_daemon_once.py  run_expire_stale_recommendations.py  run_optimizer_weekly.py  run_retro_rescore.py  run_trigify_discovery.py  scout_summary.py  scrape_google_maps.py  scrape_mindbody.py  seed_autonomy_rules.py  setup_client.sh
scripts/_lib/: markdown_loader.py
scripts/sql/: 001_foundation.sql  002_scout.sql  003_client_config_extensions.sql  (+20 more)
skills/: README.md
systems/: __init__.py  base.py
tests/: conftest.py  test_config_settings.py
tools/: README.md
(+412 files in other folders)
