[project]
name = "ai-os-blueprint"
version = "0.1.0"
description = "AI Operating System Blueprint — productised AIOS template"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Anthropic SDK
    "anthropic>=0.34.0",

    # Database
    "supabase>=2.7.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",

    # HTTP client
    "httpx>=0.27.0",

    # Config
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",

    # Logging + observability
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.13.0",

    # Utilities
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "tenacity>=8.5.0",  # for retries with backoff
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict_optional = true
