[project]
name = "ai-os-blueprint"
version = "0.1.0"
description = "AI Operating System Blueprint — productised AIOS template"
requires-python = ">=3.11"
dependencies = [
    # Foundation (pinned to released tag)
    "aios-foundation @ git+https://github.com/aios-kit/aios-foundation.git@v0.3.0",

    # Scout — outbound prospecting (extracted Phase 2)
    "aios-scout @ git+https://github.com/aios-kit/aios-scout.git@v0.2.0",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Anthropic SDK
    "anthropic>=0.34.0",

    # Embeddings
    "voyageai>=0.2.3",

    # Database
    "supabase>=2.7.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",

    # HTTP client
    "httpx>=0.27.0",

    # Headless browser for identity-scraper fallback (Task 9.5c)
    "playwright>=1.48.0",
    # Stealth patches to bypass Cloudflare IUAM (Clutch + similar)
    "playwright-stealth>=2.0.0",

    # Config
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",

    # Logging + observability
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.13.0",

    # Utilities
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "tenacity>=8.5.0",  # for retries with backoff

    # Scheduler (Task 16.6 — autonomous daemon)
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aios"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict_optional = true
